@@ -54,15 +54,17 @@ class RecipeSchedulerTest implements RewriteTest {
             .executionContext(new InMemoryExecutionContext())
             .recipe(new BoomRecipe())
             .afterRecipe(run -> {
-                  SourceFile after = run.getChangeset().getAllResults().get(0).getAfter();
+                  SourceFile after = run.getChangeset().getAllResults().getFirst().getAfter();
                   assertThat(after).isNotNull();
                   assertThat(after.getMarkers().findFirst(Markup.Error.class))
                     .hasValueSatisfying(err -> {
                         assertThat(err.getMessage()).isEqualTo("boom");
                         assertThat(err.getDetail())
-                          .matches("org.openrewrite.BoomException: boom" +
-                                   "\\s+org.openrewrite.BoomRecipe\\$1.visitText\\(RecipeSchedulerTest.java:\\d+\\)" +
-                                   "\\s+org.openrewrite.BoomRecipe\\$1.visitText\\(RecipeSchedulerTest.java:\\d+\\)");
+                          .matches("""
+                                   org.openrewrite.BoomException: boom\
+                                   \\s+org.openrewrite.BoomRecipe\\$1.visitText\\(RecipeSchedulerTest.java:\\d+\\)\
+                                   \\s+org.openrewrite.BoomRecipe\\$1.visitText\\(RecipeSchedulerTest.java:\\d+\\)\
+                                   """);
                     });
               }
             ),
