@@ -37,7 +37,7 @@ class JavaTemplateSubstitutionsTest implements RewriteTest {
               @Override
               public J visitMethodDeclaration(J.MethodDeclaration method, ExecutionContext executionContext) {
                   if (method.getSimpleName().equals("test")) {
-                      var s = method.getBody().getStatements().get(0);
+                      var s = method.getBody().getStatements().getFirst();
                       return JavaTemplate.builder("test(#{any()})")
                         .contextSensitive()
                         .build()
@@ -81,7 +81,7 @@ class JavaTemplateSubstitutionsTest implements RewriteTest {
               @Override
               public J.MethodDeclaration visitMethodDeclaration(J.MethodDeclaration method, ExecutionContext executionContext) {
                   if (method.getSimpleName().equals("test")) {
-                      var s = method.getBody().getStatements().get(0);
+                      var s = method.getBody().getStatements().getFirst();
                       return JavaTemplate.builder("test(#{anyArray()})")
                         .contextSensitive()
                         .build()
@@ -127,7 +127,7 @@ class JavaTemplateSubstitutionsTest implements RewriteTest {
                       return JavaTemplate.builder("#{} void test2() {}")
                         .contextSensitive()
                         .build()
-                        .apply(getCursor(), method.getCoordinates().replace(), method.getLeadingAnnotations().get(0));
+                        .apply(getCursor(), method.getCoordinates().replace(), method.getLeadingAnnotations().getFirst());
                   }
                   return method;
               }
@@ -158,12 +158,12 @@ class JavaTemplateSubstitutionsTest implements RewriteTest {
           spec -> spec.recipe(toRecipe(() -> new JavaIsoVisitor<>() {
               @Override
               public J.MethodDeclaration visitMethodDeclaration(J.MethodDeclaration method, ExecutionContext executionContext) {
-                  var s = method.getBody().getStatements().get(0);
+                  var s = method.getBody().getStatements().getFirst();
                   return JavaTemplate.builder("test(#{any(java.util.Collection)}, #{any(int)})")
                     .contextSensitive()
                     .build()
                     .apply(getCursor(), s.getCoordinates().replace(), s,
-                      ((J.VariableDeclarations) method.getParameters().get(1)).getVariables().get(0).getName());
+                      ((J.VariableDeclarations) method.getParameters().get(1)).getVariables().getFirst().getName());
               }
           }).withMaxCycles(1)),
           java(
@@ -194,7 +194,7 @@ class JavaTemplateSubstitutionsTest implements RewriteTest {
           spec -> spec.recipe(toRecipe(() -> new JavaIsoVisitor<>() {
               @Override
               public J.MethodDeclaration visitMethodDeclaration(J.MethodDeclaration method, ExecutionContext executionContext) {
-                  var s = method.getBody().getStatements().get(0);
+                  var s = method.getBody().getStatements().getFirst();
                   return JavaTemplate.builder("if(true) #{}")
                     .contextSensitive()
                     .build()
@@ -352,7 +352,7 @@ class JavaTemplateSubstitutionsTest implements RewriteTest {
           spec -> spec.recipe(toRecipe(() -> new JavaVisitor<>() {
               @Override
               public J visitNewArray(J.NewArray newArray, ExecutionContext executionContext) {
-                  if (((J.Literal) newArray.getDimensions().get(0).getIndex()).getValue().equals(1)) {
+                  if (((J.Literal) newArray.getDimensions().getFirst().getIndex()).getValue().equals(1)) {
                       return JavaTemplate.builder("Some.method()")
                         .contextSensitive()
                         .javaParser(JavaParser.fromJavaVersion()
