@@ -79,8 +79,8 @@ public class PadEmptyForLoopComponents extends Recipe {
             public J.ForLoop visitForLoop(J.ForLoop forLoop, ExecutionContext ctx) {
                 J.ForLoop fl = super.visitForLoop(forLoop, ctx);
                 List<Statement> updates = forLoop.getControl().getUpdate();
-                if (emptyForIteratorPadStyle != null && updates.size() == 1 && updates.get(0) instanceof J.Empty) {
-                    Statement update = updates.get(0);
+                if (emptyForIteratorPadStyle != null && updates.size() == 1 && updates.getFirst() instanceof J.Empty) {
+                    Statement update = updates.getFirst();
                     if (emptyForIteratorPadStyle.getSpace() && update.getPrefix().getWhitespace().isEmpty()) {
                         update = update.withPrefix(update.getPrefix().withWhitespace(" "));
                     } else if (!emptyForIteratorPadStyle.getSpace() && !update.getPrefix().getWhitespace().isEmpty()) {
@@ -90,10 +90,10 @@ public class PadEmptyForLoopComponents extends Recipe {
                 }
 
                 List<Statement> init = forLoop.getControl().getInit();
-                if (emptyForInitializerPadStyle != null && init.get(0) instanceof J.Empty) {
-                    if (emptyForInitializerPadStyle.getSpace() && init.get(0).getPrefix().getWhitespace().isEmpty()) {
+                if (emptyForInitializerPadStyle != null && init.getFirst() instanceof J.Empty) {
+                    if (emptyForInitializerPadStyle.getSpace() && init.getFirst().getPrefix().getWhitespace().isEmpty()) {
                         init = ListUtils.mapFirst(init, i -> i.withPrefix(i.getPrefix().withWhitespace(" ")));
-                    } else if (!emptyForInitializerPadStyle.getSpace() && !init.get(0).getPrefix().getWhitespace().isEmpty()) {
+                    } else if (!emptyForInitializerPadStyle.getSpace() && !init.getFirst().getPrefix().getWhitespace().isEmpty()) {
                         init = ListUtils.mapFirst(init, i -> i.withPrefix(i.getPrefix().withWhitespace("")));
                     }
                     fl = fl.withControl(fl.getControl().withInit(init));
